--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, <span id="nome-usuário">Fulano</span></p>
+        <p>Que bom te ver por aqui, <span id="Estefany">Estefany</span></p>
     </header>
 
     <section>
@@ -19,7 +19,7 @@
         <h2>CSS</h2>
         <P><span class="texto-inglês">Cascading Style Sheets </span>(em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
         
-	<img src="imagem/Olá Mundo.png" alt="Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas">
+	<img src="imagem/Olá Mundo (1).png" alt="Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas">
     </section>
 
     <footer>
